--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,22 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 2: Set up Node.js (optional, if you need npm)
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: Install dependencies (if any)
+      # Step 3: Install dependencies (optional, if you have a package.json)
+      - name: Install dependencies
         run: npm install  # Skip this if you don't have dependencies
 
-      - name: Build project (if any)
+      # Step 4: Build the project (optional, if you have a build step)
+      - name: Build project
         run: npm run build  # Skip this if you don't need a build step
 
+      # Step 5: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./  # The folder containing your static files
